# opal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  opal.ngfx-proj  untitled.vox
media/scenes/: wuson.mtl
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  obj_loader.cpp  obj_loader.h  opal.cpp  opal.h  typedefs.h  vox_loader.cpp  vox_loader.h
src/renderer/: CMakeLists.txt  config.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  shader.h  vk_debug.h  vk_mem_alloc.h  vk_shader.h  vk_types.h
src/scene/: CMakeLists.txt  mesh_instance.cpp  mesh_instance.h  scene.cpp  scene.h
src/shaders/: CMakeLists.txt  random.glsl  raycommon.glsl  raytrace.rchit  raytrace.rgen  raytrace.rint  raytrace2.rchit  vert_shader.vert
src/utils/: CMakeLists.txt  error.h  file.cpp  file.h  log.cpp  log.h
tutorial/: 06_swap_chain_creation.cpp  07_image_views.cpp  08_graphics_pipeline.cpp  09_shader_modules.cpp  10_fixed_functions.cpp  11_render_passes.cpp  12_graphics_pipeline_complete.cpp  13_framebuffers.cpp  14_command_buffers.cpp  15_hello_triangle.cpp  16_swap_chain_recreation.cpp  17_vertex_input.cpp  19_staging_buffer.cpp  21_descriptor_layout.cpp  26_depth_buffering.cpp
